--- a/sivusto/styles/kertotauluvisa.css
+++ b/sivusto/styles/kertotauluvisa.css
@@ -12,7 +12,7 @@ body {
     padding: 10px 10px 0px 10px;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 5%;
     background-color: rgb(39, 38, 38);
     color: white;
     text-align: center;
@@ -111,6 +111,7 @@ h1#questionDisplay {
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
     width: 40%;
+    margin-bottom: 10px;
 }
 
 
@@ -123,9 +124,9 @@ button {
     background: #36505F;
     font-family: "Nunito", sans-serif;
     font-weight: 900;
-    text-transform: uppercase;
     border: 0px solid #36505F;
     color: #fff;
+    border-radius: 6px !important; 
 }
 
 button:not(:disabled):hover {
@@ -134,12 +135,15 @@ button:not(:disabled):hover {
 }
 
 button#navButton {
-    margin-top:10px;
-    width: 40%;
     letter-spacing: 10px;
     background: #83D8D2;
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 700;
+    text-transform: uppercase;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 main.container {
