--- a/sivusto/styles/kertotauluvisa.css
+++ b/sivusto/styles/kertotauluvisa.css
@@ -12,7 +12,8 @@ body {
     padding: 10px 10px 0px 10px;
     bottom: 0;
     width: 100%;
-    height: 5%;
+    height: 3%;
+    font-size:6px;
     background-color: rgb(39, 38, 38);
     color: white;
     text-align: center;
