--- a/Miikan_tyot/css/mathstyles.css
+++ b/Miikan_tyot/css/mathstyles.css
@@ -1,52 +1,130 @@
+
 .question:not(.active) {
   display: none;
-  }
+}
 
 .hidden {
   display: none;
 }
 
+[id^="next"] {
+  justify-content: center;
+  text-decoration: none;
+  background-color: #6067ea;
+  padding: 1em;
+  border-radius: 5px;
+  border-style: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  margin-left: 40px;
+  width: 36.75em; /* Tarkkaan laskettu*/
+  color: #e6fb19;
+  font-weight: bold;
+}
+
+[id^="next"]:hover {
+  cursor: pointer;
+  border-style: groove;
+  border-color: #e6fb19;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  grid-template-rows: repeat(2, auto); 
+  gap: 10px; 
+  width: 70em;
+  height: 20em;
+}
+
 li {
-  display: block;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  padding: 10px;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  margin-bottom: 5px;
+  margin-right: 5px;
+  border-radius: 5px;
+  background-color: #eae360;
 }
 
 li:hover {
-  background-color: #f5f5f5;
+  background-color: #e6fb19;
+  cursor: pointer;
 }
 
-/* Hide the radio buttons */
+/* Piilotetaan radio-pisteet*/
 input[type="radio"] {
   display: none;
 }
 
-/* Style the labels as clickable boxes */
+/* Muotoillaan labelit laatikoiksi*/
 input[type="radio"] + label {
   display: inline-block;
   width: 20px;
   height: 20px;
-  border: 1px solid #ccc;
   margin-right: 10px;
-  cursor: pointer;
 }
 
-/* Style the labels as checked boxes */
+/* TURHA??
 input[type="radio"]:checked + label:before {
   content: "✓";
   font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  color: #333;
-}
+  line-height: 20px; 
+} */
 
-/* Make the label and radio button fill the entire div */
+/* Label ja radio-button täyttää koko divin, eli koko laatikko toimii nappulana*/
 li label {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-family: fantasy;
+  font-size: 4em;
+  color: #6067ea;
+  cursor: pointer;
 }
 
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+}
 
+h2 {
+  font-family: fantasy;
+  font-size: 2em;
+}
 
+.correct {
+  background-color: limegreen;
+  color: white;
+  border-radius: 5px;
+}
 
+.incorrect {
+  background-color: #FC3643;
+  color: white;
+  border-radius: 5px;
+}
+
+.progress-bar-container {
+  width: 100%;
+  height: 20px;
+  background-color: #ddd;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.progress-bar {
+  width: 0%;
+  height: 100%;
+  background-color: #4CAF50;
+  border-radius: 10px;
+  transition: width 0.5s ease-in-out;
+}
+
+/* Jostain syystä tämä toimii oikein silloin, kun jokaisen kysymyksen sisällä on progress-bar ja sitten se on piilotettu täällä*/
+#quiz .progress-bar-container {
+  display: none;
+}
 
