--- a/Miikan_tyot/css/mathstyles.css
+++ b/Miikan_tyot/css/mathstyles.css
@@ -58,7 +58,7 @@ ul {
   grid-template-columns: repeat(2, 1fr); 
   grid-template-rows: repeat(2, auto);
   gap: 10px; 
-  width: 70em;
+  width: 60%;
   height: 320px;
   margin: 0 auto;
   grid-auto-rows: minmax(0, max-content);
@@ -154,6 +154,7 @@ h2 {
 
 .results {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -162,7 +163,7 @@ h2 {
 
 .finish {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -172,7 +173,8 @@ h2 {
   margin: 5px;
   font-family: fantasy;
   height: 50px;
-  width: 100px;
+  /*width: 100px;*/
+  width: 6em;
   text-decoration: none;
   border-radius: 10px;
 }
@@ -204,11 +206,16 @@ h2 {
     text-align: center;
   }
 
+  p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+  }
+
   ul {
     display: block;
     gap: 10px; 
     width: 70%;
-    height: 100x;
+    height: 100px;
     grid-auto-rows: minmax(0, max-content);
     margin: 0px;
   }
@@ -236,18 +243,29 @@ h2 {
 
   h1 {
     text-align: center;
+    font-size: 40px;
   }
 
-  .finish {
+  ul {
+    display: block;
+    gap: 10px; 
+    width: 70%;
+    height: 100px;
+    grid-auto-rows: minmax(0, max-content);
+    margin-left: 5%;
+    margin-top: 50px;
+  }
+  .results {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
   }
   
-  .finish:hover {
-    border: 2px solid black;
-    border-radius: 10px;
-  }
-  
-  .finish a {
+  [id^="finalB"] {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
