--- a/Miikan_tyot/css/mathstyles.css
+++ b/Miikan_tyot/css/mathstyles.css
@@ -16,7 +16,7 @@ button.start:not(.hidden) {
   margin-top: 50px;
   width: 200px;
   height: 100px;
-  background-color: limegreen;
+  background-color: #0d6efd;
 }
 
 
@@ -33,7 +33,7 @@ button.start:not(.hidden) {
   justify-content: center;
   text-decoration: none;
   height: 30px;
-  background-color: limegreen;
+  background-color: #68d3fc;
   border-style: none;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
@@ -51,6 +51,7 @@ button.start:not(.hidden) {
   border-style: groove;
   border-color: black;
   border-radius: 5px;
+  background-color: #0d6efd;
 }
 
 [class^="options"] {
@@ -71,11 +72,11 @@ button.start:not(.hidden) {
   align-items: center; 
   margin-bottom: 5px;
   margin-right: 5px;
-  background-color: #eae360;
+  background-color: #17a6fc;
 }
 
 .options li:hover {
-  background-color: #e6fb19;
+  background-color: #0d6efd;
   cursor: pointer;
 }
 
@@ -108,7 +109,7 @@ li label {
   height: 100%;
   font-family: fantasy;
   font-size: 4em;
-  color: #6067ea;
+  color: white;
   cursor: pointer;
 }
 
@@ -120,6 +121,7 @@ p {
 h2 {
   font-family: fantasy;
   font-size: 2em;
+  text-align: center;
 }
 
 .correct {
@@ -144,7 +146,7 @@ h2 {
 .progress-bar {
   width: 0%;
   height: 100%;
-  background-color: #4CAF50;
+  background-color: #17a6fc;
   border-radius: 10px;
   transition: width 0.5s ease-in-out;
 }
@@ -161,7 +163,7 @@ h2 {
   justify-content: center;
   text-align: center;
   font-family: fantasy;
-  margin-top: 5em;
+  margin-top: 2em;
 }
 
 .finish {
@@ -170,7 +172,7 @@ h2 {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: limegreen;
+  background-color: #0d6efd;
   color: white;
   border: none;
   margin: 5px;
@@ -225,7 +227,7 @@ h2 {
     font-size: 0.7em;
   }
 
-  ul {
+  [class^="options"] {
     display: block;
     gap: 10px; 
     width: 70%;
@@ -234,11 +236,11 @@ h2 {
     margin: 0px;
   }
   
-  li {
+  .options li {
     display: block; 
     align-items: center; 
     margin-top: 20px;
-    background-color: #eae360;
+    height: 60px;
   }
 
   li label {
@@ -249,24 +251,30 @@ h2 {
     margin-top: 40px;
     width: 70%;
     height: 2em; 
+    background-color: #0d6efd;
   }
 
 }
 
 @media only screen and (max-width: 576px) {
 
+  body {
+    width: 100%;
+  }
+
   h1 {
     text-align: center;
     font-size: 40px;
   }
 
-  ul {
+  [class^="options"] {
     display: block;
+    justify-content: center;
     gap: 10px; 
     width: 70%;
     height: 100px;
     grid-auto-rows: minmax(0, max-content);
-    margin-left: 5%;
+    margin: 0 auto;
     margin-top: 50px;
   }
   .results {
@@ -282,4 +290,5 @@ h2 {
     flex-direction: row;
     justify-content: center;
   }
+
 }
