--- a/Miikan_tyot/css/mathstyles.css
+++ b/Miikan_tyot/css/mathstyles.css
@@ -19,6 +19,25 @@ button.start:not(.hidden) {
   background-color: #0d6efd;
 }
 
+header {
+  font-family: fantasy;
+}
+
+/*Näillä voi muokata navbarin värejä
+.navbar.bg-dark {
+  background-color: #0d6efd !important;
+}
+
+.navbar-expand-lg.bg-body-tertiary {
+  background-color: #17a6fc !important;
+}*/
+
+.source {
+  font-size: 10px !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  text-align: center !important;
+}
+
 
 .start:hover {
   cursor: pointer;
