--- a/Reetan_tyot/css/style.css
+++ b/Reetan_tyot/css/style.css
@@ -44,3 +44,14 @@
     margin: 30px 0;
     gap: 20px;
 }
+
+#footer {
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(39, 38, 38);
+    color: white;
+    text-align: center;
+}
