--- a/Venlan_tyot/historiavisa.css
+++ b/Venlan_tyot/historiavisa.css
@@ -102,3 +102,26 @@ text-align: center;
 font-weight: 600;
 }
   
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#footer {
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: rgb(39, 38, 38);
+  color: white;
+  text-align: center;
+}
+
+h1 {
+  color: rgb(212, 210, 210);
+}
+
+.row {
+  margin-top: 2em;
+}
