--- a/Venlan_tyot/historiavisa.css
+++ b/Venlan_tyot/historiavisa.css
@@ -17,7 +17,7 @@ body {
 
 
 .container p {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .quizProgress {
@@ -124,4 +124,9 @@ h1 {
 
 .row {
   margin-top: 2em;
+}
+
+h4 {
+  margin-top: 10px;
+  font-weight:bold;
 }
