--- a/sivusto/historia_sivu/historiavisa.css
+++ b/sivusto/historia_sivu/historiavisa.css
@@ -1,59 +1,132 @@
 body {
-    background-color: #ffffff;
-    color: #000;
-    font-family: Arial, sans-serif;
-    font-size: 18px;
-  }
+  background-color: #ffffff;
+  color: #000;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+}
+
+.container {
+  margin: 30px auto;
+  max-width: 600px;
+  padding: 20px;
+  background-color: #b6a38b;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  padding-top: 1px;
+}
+
+
+.container p {
+  margin-top: 10px;
+}
+
+.quizProgress {
+  text-align: center;
+  font-weight: 550;
+}
+
+button {
+  background-color: #635653;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #dabda1;
+}
+
+#startQuiz {
+  text-align: center;
+  margin-top: 50px;
   
-  .container {
-    margin: 30px auto;
-    max-width: 600px;
-    padding: 20px;
-    background-color: #b6a38b;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-  }
+}
+
+#welcome {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+#startButton {
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #ad937f;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  margin: 0 auto;
+
+
+}
+
+#startButton:hover {
+  background-color: #cfaa85;
+}
+
+#results, #feedback {
+text-align: center;
+}
+
+button.next {
+margin-bottom: 5px;
+}
+
+#feedback {
+display: none;
+text-align: center;
+}
+
+.feedback {
+margin-top: 20px;
+padding: 20px;
+background-color: #a79886;
+border-radius: 5px;
+box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+text-align: center;
+font-size: 18px;
+line-height: 1.5;
+color: #000000;
+}
+
+.resetButton {
+margin-top: 30px;
+text-align: center;
+}
+
+.results {
+font-weight: 600;
+}
   
-  .container p {
-    margin-top: 20px;
-  }
-  
-  button {
-    background-color: #8b5e50;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  button:hover {
-    background-color: #dabda1;
-  }
-  
-  #startQuiz {
-    text-align: center;
-    margin-top: 50px;
-  }
-  
-  #welcome {
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
-  
-  #startButton {
-    font-size: 18px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #ad937f;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  #startButton:hover {
-    background-color: #cfaa85;
-  }
-  
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#footer {
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: rgb(39, 38, 38);
+  color: white;
+  text-align: center;
+}
+
+h1 {
+  color: rgb(212, 210, 210);
+}
+
+.row {
+  margin-top: 2em;
+}
+
+h4 {
+  margin-top: 10px;
+  font-weight:bold;
+}
