--- a/sivusto/historia_sivu/historiavisa.css
+++ b/sivusto/historia_sivu/historiavisa.css
@@ -9,7 +9,7 @@ body {
   margin: 30px auto;
   max-width: 600px;
   padding: 20px;
-  background-color: #b6a38b;
+  background-color: #c5b9ae;
   border-radius: 5px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
   padding-top: 1px;
