--- a/Miikan_tyot/css/mathstyles.css
+++ b/Miikan_tyot/css/mathstyles.css
@@ -1,11 +1,48 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Nunito', sans-serif;
+  background-color: rgb(39, 38, 38);
+}
+
+.card-title {
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  padding-top: 3px;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+}
+
+.col-5.my-5 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 3em;
+  color: #fff;
+}
+
+.navbar-brand {
+  font-weight:900;
+}
+
+nav.navbar.navbar-expand-lg.bg-body-tertiary {
+  width: 100%;
+}
+
 .question:not(.active) {
   display: none;
 }
 
 h1 {
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
   font-size: 70px;
   text-align: center;
+  color: white;
 }
 
 .hidden {
@@ -20,7 +57,7 @@ button.start:not(.hidden) {
 }
 
 header {
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
 }
 
 /*Näillä voi muokata navbarin värejä
@@ -78,7 +115,8 @@ header {
   grid-template-columns: repeat(2, 1fr); 
   grid-template-rows: repeat(2, auto);
   gap: 10px; 
-  width: 60%;
+  /*width: 60%;*/
+  width: 800px;
   /*height: 320px;*/
   height: 30%;
   margin: 0 auto;
@@ -126,21 +164,23 @@ li label {
   align-items: center;
   width: 100%;
   height: 100%;
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
   font-size: 4em;
   color: white;
   cursor: pointer;
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 1.5em;
+  color: white;
 }
 
 h2 {
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
   font-size: 2em;
   text-align: center;
+  color: white;
 }
 
 .correct {
@@ -181,7 +221,7 @@ h2 {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
   margin-top: 2em;
 }
 
@@ -195,7 +235,7 @@ h2 {
   color: white;
   border: none;
   margin: 5px;
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
   height: 50px;
   /*width: 100px;*/
   width: 6em;
@@ -220,7 +260,7 @@ h2 {
 }
 
 .results p {
-  font-family: fantasy;
+  font-family: 'Nunito', sans-serif;
   font-size: 1.5em;
 }
 
@@ -235,6 +275,20 @@ h2 {
   text-align: center;
 }
 
+
+
+@media (min-height: 800px) {
+  .container {
+    padding-top: 5em;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  [class^="options"] {
+    width: 100%;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   
   h1 {
@@ -247,12 +301,12 @@ h2 {
   }
 
   [class^="options"] {
-    display: block;
     gap: 10px; 
     width: 70%;
     height: 30%;
     grid-auto-rows: minmax(0, max-content);
     margin: 0px;
+    margin-bottom: 40px;
   }
   
   .options li {
@@ -271,6 +325,7 @@ h2 {
     width: 70%;
     height: 2em; 
     background-color: #0d6efd;
+    margin-bottom: 50px;
   }
 
 }
