--- a/sivusto/styles/musavisa_styles.css
+++ b/sivusto/styles/musavisa_styles.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     background-color: black;
+    color: rgb(255, 255, 255);
 }
 
 .quiz {
