--- a/sivusto/historia_sivu/historiavisa.css
+++ b/sivusto/historia_sivu/historiavisa.css
@@ -5,6 +5,43 @@ body {
   font-size: 18px;
 }
 
+.card-title {
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  padding-top: 3px;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+}
+
+.col-5.my-5 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 3em;
+  color: #fff;
+}
+
+.navbar-brand {
+  font-weight:900;
+}
+
+nav.navbar.navbar-expand-lg.bg-body-tertiary {
+  width: 100%;
+}
+
+.question:not(.active) {
+  display: none;
+}
+
+header {
+  font-family: 'Nunito', sans-serif;
+}
+
 .container {
   margin: 30px auto;
   max-width: 600px;
