--- a/sivusto/styles/ktvisa.css
+++ b/sivusto/styles/ktvisa.css
@@ -52,6 +52,10 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
     width: 100%;
 }
 
+header {
+    font-family: 'Nunito', sans-serif;
+  }
+
 div#body-wrapper {
     justify-content: center;
     display: flex;
