--- a/sivusto/styles/musavisa_styles.css
+++ b/sivusto/styles/musavisa_styles.css
@@ -5,6 +5,43 @@ body {
     color: rgb(255, 255, 255);
 }
 
+.card-title {
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    padding-top: 3px;
+  }
+  
+  .btn {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .col-5.my-5 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 3em;
+    color: #fff;
+  }
+  
+  .navbar-brand {
+    font-weight:900;
+  }
+  
+  nav.navbar.navbar-expand-lg.bg-body-tertiary {
+    width: 100%;
+  }
+  
+  .question:not(.active) {
+    display: none;
+  }
+
+header {
+    font-family: 'Nunito', sans-serif;
+  }
+
 .quiz {
     width: 90%;
     max-width: 700px;
