--- a/sivusto/styles/ktvisa.css
+++ b/sivusto/styles/ktvisa.css
@@ -7,6 +7,15 @@ body {
     min-height: 500px;
 }
 
+@media only screen and (max-width: 600px) {
+    h1#questionDisplay {
+    font-size: 3em !important;
+}
+    div#questionText{
+        width: 118% !important;
+    }
+}
+
 #footer {
     position: fixed;
     padding: 10px 10px 0px 10px;
